testing experimental branch.

--- a/TestsAndSample/TestsAndSample.xcodeproj/xcshareddata/xcschemes/TestsAndSample.xcscheme
+++ b/TestsAndSample/TestsAndSample.xcodeproj/xcshareddata/xcschemes/TestsAndSample.xcscheme
@@ -51,6 +51,17 @@
                BlueprintName = "Tests"
                ReferencedContainer = "container:TestsAndSample.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "CustomNotificationHubTests">
+               </Test>
+               <Test
+                  Identifier = "NotificationHubDefaultTests">
+               </Test>
+               <Test
+                  Identifier = "NotificationTests">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
       <MacroExpansion>
