Add 1000 keys as starting capacity. Run performance test with optimized flags set.

--- a/TestsAndSample/TestsAndSample.xcodeproj/xcshareddata/xcschemes/TestsAndSample.xcscheme
+++ b/TestsAndSample/TestsAndSample.xcodeproj/xcshareddata/xcschemes/TestsAndSample.xcscheme
@@ -51,6 +51,11 @@
                BlueprintName = "Tests"
                ReferencedContainer = "container:TestsAndSample.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "PerformanceTests">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
       <MacroExpansion>
